outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_23-57-19/evaluations/problem_eval-6802906066848848698_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance score, using a sigmoid function to smoothly transition between exploration and exploitation based on a decaying temperature parameter. It also introduces a lookahead mechanism to evaluate potential paths, balancing immediate distance with long-term path quality.}
                                                                                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance score, using a sigmoid function to smoothly transition between exploration and exploitation based on a decaying temperature parameter. It also introduces a lookahead mechanism to evaluate potential paths, balancing immediate distance with long-term path quality.}
                                                                                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'
